# Autonomous-QA

./: .gitignore  .swaggertest.yaml  PRD.md  README.md  handoff.md  plan.md  pyproject.toml
swaggertest/: __init__.py  cli.py  config.py  discoverer.py  generator.py  llm_client.py  matcher.py  models.py  parser.py  reporter.py  runner.py  testcase_io.py  ticket_reader.py  validator.py
tests/: test_config.py  test_discoverer.py  test_reporter.py  test_validator.py
